--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
@@ -6,8 +6,8 @@
                     <thead>
                         <th class="transparent">Loan Id</th>
                         <th class="transparent">Loan Amount</th>
-                        <th class="transparent">Payment Date</th>
-                        <th class="transparent">Part Payment</th>
+                        <th class="transparent">Loan Date</th>
+                        <th class="transparent">Last Part Payment Date</th>
                         <th class="transparent">Outstanding Loan Amount</th>
                     </thead>
                     <tbody>
@@ -48,6 +48,8 @@
             <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
                 <div class="col-6 text-center">
                     <kt-button [value]="'Part Payment'" [type]="'button'" (click)="partPayment()"></kt-button>
+                    <span class="kt-padding-5"></span>
+                    <kt-button [value]="'View Part Payment Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
                 </div>
             </div>
 
@@ -60,7 +62,7 @@
                     <div class="row justify-content-center">
                         <div class="col-6">
                             <div class="row kt-margin-t-10">
-                                <div class="col form-label">
+                                <div class="align-self-center font-weight-500 col text-right">
                                     <label for=""> Enter Amount </label>
                                 </div>
                                 <div class="col">
@@ -121,7 +123,7 @@
 
                 <h5 class="kt-padding-t-20 kt-padding-b-20" *ngIf="paymentDetails">Payment Confirmation</h5>
                 <div class="table-div" *ngIf="paymentDetails">
-                    <table class="table outer-border">
+                    <table *ngIf="paymentDetails" class="table outer-border">
                         <thead>
                             <th class="transparent">Loan ID</th>
                             <th class="transparent">Loan Amount</th>
@@ -131,24 +133,25 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>{{paymentDetails?.customerLoan[0]?.loanUniqueId}} <br>
+                                <td *ngIf="paymentDetails && paymentDetails?.customerLoan.length">
+                                    {{paymentDetails?.customerLoan[0]?.loanUniqueId}} <br>
                                     <span *ngIf="paymentDetails?.customerLoan?.length > 1">
                                         {{paymentDetails?.customerLoan[1]?.loanUniqueId}}
                                     </span>
                                 </td>
-                                <td >
+                                <td *ngIf="paymentDetails && paymentDetails?.customerLoan.length">
                                     {{paymentDetails?.customerLoan[0]?.outstandingAmount}}<br>
                                     <span *ngIf="paymentDetails?.customerLoan?.length > 1">
                                         {{paymentDetails?.customerLoan[1]?.outstandingAmount}}
                                     </span>
                                 </td>
-                                <td >
+                                <td *ngIf="paymentDetails && paymentDetails?.customerLoan.length">
                                     {{paymentDetails?.customerLoan[0]?.partPayment}}<br>
                                     <span *ngIf="paymentDetails?.customerLoan?.length > 1">
                                         {{paymentDetails?.customerLoan[1].partPayment}}
                                     </span>
                                 </td>
-                                <td >
+                                <td *ngIf="paymentDetails && paymentDetails?.customerLoan.length">
                                     {{paymentDetails?.customerLoan[0]?.newOutstandingAmount}}<br>
                                     <span *ngIf="paymentDetails?.customerLoan?.length > 1">
                                         {{paymentDetails?.customerLoan[1].newOutstandingAmount}}
