--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/emi-logs-dialog/emi-logs-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/emi-logs-dialog/emi-logs-dialog.component.html
@@ -1,7 +1,7 @@
 <kt-portlet>
     <kt-modal-header [title]='"Interest EMI"' (action)="action($event)"></kt-modal-header>
     <kt-portlet-body>
-        <h5 class="kt-padding-t-25 kt-padding-l-20">Interest EMI</h5>
+        <!-- <h5 class="kt-padding-t-25 kt-padding-l-20">Interest EMI</h5> -->
         <div class="table-div kt-padding-20">
             <table class="table outer-border">
                 <thead>
