--- a/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
@@ -114,9 +114,48 @@
     <kt-portlet-footer class="text-center">
         <button *ngIf="orderData.orderCurrentStatus.id == 8" type="button" class="btn btn-outline my-3"
             (click)="printEmiReceipt(orderData.id)">Print Receipt</button>
-        <button
+            <div class="row">
+      
+            <div class="col-6 pl-4">
+                <form [formGroup]="paymentForm">
+                    
+                    <div class="row py-3">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Payment
+                                Mode</label>
+                        </div>
+                        <div class="col-8">
+                            <select formControlName="paymentMode" class="form-control"
+                                [class.isError]="paymentForm.controls.paymentMode.touched && paymentForm.controls.paymentMode.invalid">
+                                <option value="">Select Payment Type</option>
+                            <!-- </select>
+                            <select formControlName="paymentMode" class="form-control"
+                                [class.isError]="paymentForm.controls.paymentMode.touched && paymentForm.controls.paymentMode.invalid"> -->
+                                <option value="">Select Payment Type</option>
+                                <option value="cash">CASH</option>
+                                <option value="imps">IMPS</option>
+                                <option value="neft">NEFT</option>
+                                <option value="rtgs">RTGS</option>
+                                <option value="cheque">CHEQUE</option>
+                                <option value="upi">UPI</option>
+                                <option value="paymentGateway">PAYMENT GATEWAY</option>
+                            </select>
+                            <div
+                                *ngIf="paymentForm.controls.paymentMode.touched && paymentForm.controls.paymentMode.invalid">
+                                <mat-error *ngIf="paymentForm.controls.paymentMode.errors?.required">
+                                    Field is required
+                                </mat-error>
+                            </div>
+                        </div>
+                    </div>
+                  
+                </form>
+               
+            </div>
+            <button
             *ngIf="orderData.orderCurrentStatus.id == 2 || orderData.orderCurrentStatus.id == 3 || orderData.orderCurrentStatus.id == 15"
-            type="button" class="btn btn-outline my-3" (click)="getEmiAmount()" [disabled]="emi.length == 0">Pay
+            type="button" [type]="'submit'" class="btn btn-outline my-3" (click)="getEmiAmount()" [disabled]="emi.length == 0">Pay
             EMI</button>
+            </div>
     </kt-portlet-footer>
 </kt-portlet>
