--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
@@ -4,7 +4,8 @@
     }
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 148% !important;
+        // width: 148% !important;
+        width: 125% !important;
     }
     .mat-column-fullName{
         flex: 0 0 11% !important;
