--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
@@ -18,7 +18,7 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
 
-                        <div class="row" *ngIf="data?.from != 'lead'">
+                        <div class="row" *ngIf="controls.customerUniqueId.value">
                             <!-- Partner Name -->
                             <div class="col-4 form-label">
                                 <label class="mandatory kt-padding-l-10">Customer Id</label>
