--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -118,7 +118,7 @@
                             View</div>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="appraiser">
+                <!-- <ng-container matColumnDef="appraiser">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let lead">
                         <ng-container *ngIf="lead.status.id == '1'">
@@ -131,7 +131,7 @@
                         </ng-container>
 
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
 
                 <ng-container matColumnDef="menu">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
